--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/thor1878/quiz-test#readme",
   "dependencies": {
+    "@actions/core": "^1.6.0",
     "readline": "^1.3.0"
   }
 }
