--- a/.github/config.json
+++ b/.github/config.json
@@ -5,5 +5,5 @@
         "assessed": 1,
         "passed": 2
     },
-    "tsURL": "https://351c-130-225-198-141.ngrok.io/check-status"
+    "tsURL": "https://c13d-130-225-198-141.ngrok.io/check-status"
 }
